--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                 <div class="emoji">📸</div>
                 <h2 class="text-3xl md:text-4xl font-bold mb-6 text-gradient"></h2>
                 <div class="bg-gradient-to-r from-pink-200 to-rose-200 rounded-xl p-8 mb-8 flex flex-col justify-center items-center">
-                    <img src="C:\Users\ACER\Desktop\mon amie\WhatsApp Image 2026-01-09 at 12.54.58.jpeg" height="200" width="200" alt="" srcset="">
+                    <img src="WhatsApp Image 2026-01-09 at 12.54.58.jpeg" height="200" width="200" alt="" srcset="">
                     <p class="text-lg text-gray-700 italic mt-2">VOTRE BEAUX MOMENTS</p>
                 </div>
                 <p class="text-lg text-gray-700 mb-6">
@@ -468,5 +468,6 @@
         // updateProgressBar();
     </script>
 </body>
+
 
 </html>
